2002-04-02  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/pconfig.c (set_file): now that we do not
	rely on server logic to add file monitor, we can add
	monitor from the option callback.

	* src/udp-server.c: make the size of our buffer 
	compliant with what is specified in RFC 3164 (1024
	bytes max per syslog messages).

	* plugins.rules.in: comment the Debug plugin entry 
	by default.

2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_monitor_file): 
	set current mtime.

	* plugins/simple/simple.c (parse_impact_desc): 
	new function, parse impact description.
	(parse_rule): 
	Handle impact description.

	(simple_run): detail debuging output a little more.

	* plugins/simple/ruleset/simple.rules: 
	some more rules, and some documentation.

	* src/main.c (lml_dispatch_log): 
	new public function that should be called when we have a new log
	line. This function handle both the case when we're threaded
	(UDP + file monitor), or when there is no thread (file monitor only).

	* src/udp-server.c (udp_server_standalone): 
	select with a timeout of one second. Call file_server_wake_up
	every seconds.

	* src/file-server.c: 
	stop using server-logic.c. We now have an array of FD to monitor.
	In order to do so, we check the FDs modification time and read 
	data if available, then we go to sleep (as tail does).

	(file_server_wake_up): 
	to be called by a working thread instead of file_server_standalone()
	(for exemple if we also have an UDP server).

	(file_server_standalone): 
	new function for starting the file monitor.
	
	* src/server-logic.c:
	Because there is no way to tell read() / select() to block on
	EOF for regular file, server-logic.c isn't an adapted solution.
	Removed.
	
2002-03-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/server-logic.c (server_logic_process_requests): 
	(child_reader): don't accept connection before the thread
	install the signal handler for SIGUSR1.
