@@ -2,14 +2,19 @@
 #define LOG_COMMON_H
 
 #include <time.h>
+#include <sys/time.h>
 
 typedef struct {
+        char *log;
 	char *source;
-	struct tm time_received;
-	char *log;
+        
+        struct timeval tv;
+        
+        char *target_program;
+        char *target_hostname;
 } log_container_t;
 
-log_container_t *log_container_new(char *log, char *from, struct tm *time);
+log_container_t *log_container_new(const char *log, const char *from);
 void log_container_delete(log_container_t * lc);
 
 #endif				/* LOG_COMMON_H */
